--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -61,6 +61,10 @@ body {
   border-top-right-radius: 0;
 }
 
+.min-content-height {
+  min-height: 35rem;
+}
+
 .dev-log {
   a,
   p,
@@ -318,7 +322,7 @@ body {
       display: flex;
       flex-direction: row;
 
-      &__user {
+      &__profile {
         font-weight: bold;
         color: $mid-color;
 
@@ -326,17 +330,15 @@ body {
           margin-right: 0.2rem;
         }
 
-        // &-user {
-        //   &-details {
-        //     &__line {
-        //       &-label {
-        //         font-weight: 400;
-        //         margin-right: 1rem;
-        //       }
-        //       &-detail {
-        //       }
-        //     }
-        //   }
+        &-details {
+          &__line {
+            &-label {
+              font-weight: 400;
+              margin-right: 1rem;
+            }
+          }
+        }
+
         &-button {
           padding: 0;
           margin: 0;
@@ -349,84 +351,77 @@ body {
         }
       }
 
-      // &-menu {
-      //   height: 20rem;
-      //   width: 100%;
-      //   margin-top: 0.5rem;
-      //   margin-bottom: 1rem;
-      //   padding: 0.5rem;
+      &__menu {
+        height: 20rem;
+        width: 100%;
+        padding: 0.5rem;
+        margin-top: 0.5rem;
+        margin-bottom: 1rem;
 
-      //   color: $fore-color;
-      //   background-color: $mid-color;
-      //   @extend .border-style;
+        color: $fore-color;
+        background-color: $mid-color;
+        @extend .border-style;
 
-      //   display: flex;
-      //   flex-direction: column;
-      //   flex-wrap: nowrap;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
 
-      //   &__header {
-      //     max-width: 100%;
-      //     flex-grow: 0;
+        &-title {
+          max-width: 100%;
+          flex-grow: 0;
 
-      //     .title {
-      //       display: inline-block;
-      //       overflow: hidden;
-      //       white-space: nowrap;
-      //       text-overflow: ellipsis;
-      //       max-width: 75%;
-      //     }
+          .title {
+            display: inline-block;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            max-width: 75%;
+          }
 
-      //     button.close-button {
-      //       float: right;
-      //       margin: 0;
-      //       padding: 0;
-      //       background-color: $fore-color;
+          button.close-button {
+            float: right;
+            margin: 0;
+            padding: 0;
+            background-color: $fore-color;
 
-      //       .icon-close {
-      //         transform: rotateZ(45deg);
-      //         fill: $mid-color;
-      //       }
-      //     }
-      //   }
+            .icon-close {
+              transform: rotateZ(45deg);
+              fill: $mid-color;
+            }
+          }
+        }
 
-      //   &__content {
-      //     flex-grow: 1;
+        &-body {
+          flex-grow: 1;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
 
-      //     flex-grow: 1;
-      //     display: flex;
-      //     flex-direction: column;
-      //     justify-content: space-between;
-
-      //     button.quit-button {
-      //       width: 7rem;
-      //       margin-bottom: 0;
-      //     }
-      //   }
-      // }
-      // }
-    }
-  }
-
-  @media screen and (min-width: 0) and (max-width: $media-md) {
-    .header {
-      &__content {
-        &.open {
-          display: none;
+          button.quit-button {
+            width: 7rem;
+            margin-bottom: 0;
+          }
         }
       }
     }
   }
 
+  @media screen and (min-width: 0) and (max-width: $media-md) {
+    .header__content {
+      &.open {
+        display: none;
+      }
+    }
+  }
+
   @media screen and (min-width: $media-md) {
-    .header {
-      // .profile-menu {
-      //   max-width: 20rem;
-      //   position: absolute;
-      //   top: 0;
-      //   right: 0;
-      //   z-index: 100;
-      //   border: 1px solid $bg-color;
-      // }
+    .header__content__menu {
+      max-width: 20rem;
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: 100;
+      border: 1px solid $bg-color;
     }
   }
 
@@ -559,10 +554,6 @@ body {
         margin: 0;
       }
     }
-  }
-
-  .min-content-height {
-    min-height: 35rem;
   }
 
   .footer {
