--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -359,7 +359,7 @@ body {
       }
 
       &__menu {
-        height: 20rem;
+        min-height: 20rem;
         width: 100%;
         padding: 0.5rem;
         margin-top: 0.5rem;
